--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="APIs"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/API"/>
+	<classpathentry kind="lib" path="D:/Justin/Documents/Research/iButton/APIs/OneWireAPI.jar" sourcepath="APIs/OneWireAPISource.jar"/>
+	<classpathentry kind="lib" path="D:/Justin/Documents/Research/iButton/APIs/RXTXcomm.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
