--- a/.classpath
+++ b/.classpath
@@ -3,16 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="APIs"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="D:/Justin/Documents/Research/iButton/APIs/OneWireAPI.jar" sourcepath="APIs/OneWireAPISource.jar"/>
-	<classpathentry kind="lib" path="D:/Justin/Documents/Research/iButton/APIs/RXTXcomm.jar"/>
-	<classpathentry kind="lib" path="APIs/commons-codec-1.9.jar"/>
-	<classpathentry kind="lib" path="APIs/fluent-hc-4.5.3.jar"/>
-	<classpathentry kind="lib" path="APIs/httpclient-4.5.3.jar"/>
-	<classpathentry kind="lib" path="APIs/httpclient-cache-4.5.3.jar"/>
-	<classpathentry kind="lib" path="APIs/httpclient-win-4.5.3.jar"/>
-	<classpathentry kind="lib" path="APIs/httpcore-4.4.6.jar"/>
-	<classpathentry kind="lib" path="APIs/httpmime-4.5.3.jar"/>
-	<classpathentry kind="lib" path="APIs/jna-4.1.0.jar"/>
-	<classpathentry kind="lib" path="APIs/jna-platform-4.1.0.jar"/>
+	<classpathentry kind="lib" path="APIs/RXTXcomm.jar"/>
+	<classpathentry kind="lib" path="APIs/OneWireAPI.jar" sourcepath="APIs/OneWireAPISource.jar"/>
+	<classpathentry kind="lib" path="APIs/gson-2.8.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
